[package]
name = "aquarius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.58"
poem-openapi =  { version = "3.0.5" , features = ["swagger-ui", "email"] }
slab = "0.4.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
